chore: added amqplib (rabbitmq)

--- a/rabbitmq-chat-server/package.json
+++ b/rabbitmq-chat-server/package.json
@@ -15,6 +15,7 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
