--- a/rabbitmqdocs/package.json
+++ b/rabbitmqdocs/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/amqplib": "^0.10.7",
     "amqplib": "^0.10.7"
   }
 }
