--- a/rabbitmqdocs/package.json
+++ b/rabbitmqdocs/package.json
@@ -7,10 +7,15 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "send": "ts-node src/send.ts",
+    "receive": "ts-node src/index.ts"
   },
   "dependencies": {
     "@types/amqplib": "^0.10.7",
-    "amqplib": "^0.10.7"
+    "amqplib": "^0.10.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
