--- a/rabbitmqdocs/package.json
+++ b/rabbitmqdocs/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "send": "ts-node src/send.ts",
-    "receive": "ts-node src/index.ts"
+    "receive": "ts-node src/receive.ts"
   },
   "dependencies": {
     "@types/amqplib": "^0.10.7",
