refactor: refactoring package.json

--- a/rabbitmqdocs/package.json
+++ b/rabbitmqdocs/package.json
@@ -9,12 +9,12 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "send": "ts-node src/send.ts",
-    "receive": "ts-node src/receive.ts",
-    "new_task": "ts-node src/new_task.ts",
-    "worker": "ts-node src/worker.ts",
-    "receive_logs": "ts-node src/receive_logs.ts",
-    "emit_logs": "ts-node src/emit_log.ts"
+    "send": "ts-node src/HelloWord/send.ts",
+    "receive": "ts-node src/HelloWord/receive.ts",
+    "new_task": "ts-node src/WorkQueues/new_task.ts",
+    "worker": "ts-node src/WorkQueues/worker.ts",
+    "receive_logs": "ts-node src/PubSub/receive_logs.ts",
+    "emit_logs": "ts-node src/PubSub/emit_log.ts"
   },
   "dependencies": {
     "@types/amqplib": "^0.10.7",
